--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -41,13 +41,15 @@ items:
   - name: Klusteråtgärder
     items:
     - name: Skapa ett AKS-kluster
-      href: create-cluster.md
+      href: /cli/azure/aks#az-aks-create
+      maintainContext: true
     - name: Skala ett AKS-kluster
       href: scale-cluster.md
     - name: Uppgradera ett AKS-kluster
       href: upgrade-cluster.md
     - name: Ta bort ett AKS-kluster
-      href: delete-cluster.md
+      href: /cli/azure/aks#az-aks-delete
+      maintainContext: true
     - name: Azure AD-aktiverad AKS
       href: aad-integration.md
     - name: Använda Virtual Kubelet
@@ -180,9 +182,9 @@ items:
     href: https://azure.microsoft.com/resources/videos/index/?services=container-service&sort=newest
   - name: VANLIGA FRÅGOR OCH SVAR
     href: faq.md
-ms.openlocfilehash: 2247d13faae48ed2d6a3f5337d6b0d6107062f6b
-ms.sourcegitcommit: cc4fdd6f0f12b44c244abc7f6bc4b181a2d05302
+ms.openlocfilehash: a050be092d1216a00a7d73e383086709dc6d15fc
+ms.sourcegitcommit: b7e5bbbabc21df9fe93b4c18cc825920a0ab6fab
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/25/2018
-ms.locfileid: "47063701"
+ms.lasthandoff: 09/27/2018
+ms.locfileid: "47405370"
