--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -225,9 +225,9 @@ items:
       href: nested-virtualization.md
   - name: Hantera kostnader
     items:
-    - name: Förskottsbetala för virtuella datorer – Azure Reservations
+    - name: Förskottsbetala för virtuella datorer – Azure-reservationer
       href: prepay-reserved-vm-instances.md
-    - name: Vad är Azure Reservations?
+    - name: Vad är Azure-reservationer?
       href: ../../billing/billing-save-compute-costs-reservations.md
     - name: Flexibilitet för VM-instansstorlek
       href: reserved-vm-instance-size-flexibility.md
@@ -402,80 +402,8 @@ items:
         href: migration-classic-resource-manager-community-tools.md
       - name: VANLIGA FRÅGOR OCH SVAR
         href: migration-classic-resource-manager-faq.md
-  - name: Felsöka
-    items:
-    - name: Anslutningar till fjärrskrivbord
-      href: troubleshoot-rdp-connection.md
-      items:
-      - name: Detaljerade steg
-        href: detailed-troubleshoot-rdp.md
-      - name: Felmeddelanden
-        href: troubleshoot-specific-rdp-errors.md
-    - name: Återställ RDP-lösenord
-      href: reset-rdp.md
-    - name: Återställa lokala lösenord utan Azure-agenten
-      href: reset-local-password-without-agent.md
-    - name: Förstå en omstart av systemet
-      href: understand-vm-reboot.md
-    - name: Återställ NIC
-      href: reset-network-interface.md
-    - name: Startdiagnostik
-      href: boot-diagnostics.md
-    - name: Seriekonsol
-      href: serial-console.md
-      items:
-      - name: CMD- och PowerShell-kommandon
-        href: serial-console-cmd-ps-commands.md
-    - name: Skapa en virtuell dator
-      href: troubleshoot-deployment-new-vm.md
-    - name: Distributionsproblem
-      href: troubleshoot-deploy-vm.md
-    - name: Starta om eller ändra storlek på en virtuell dator
-      href: restart-resize-error-troubleshooting.md
-    - name: Programåtkomst
-      href: troubleshoot-app-connection.md
-    - name: Problem med aktivering
-      href: troubleshoot-activation-problems.md
-    - name: Allokeringsfel
-      href: allocation-failure.md
-    - name: Allokeringsfel – klassisk virtuell dator
-      href: allocation-failure-classic.md
-    - name: Distribuera om en VM
-      href: redeploy-to-new-node.md
-    - name: Vanliga felmeddelanden
-      href: error-messages.md
-    - name: Återställningsåtkomst till virtuell dator
-      items:
-      - name: Azure PowerShell
-        href: troubleshoot-recovery-disks.md
-      - name: Azure Portal
-        href: troubleshoot-recovery-disks-portal.md
-    - name: Använda PerfInsights
-      href: how-to-use-perfInsights.md
-    - name: VM-tillägg för prestandadiagnostik
-      href: performance-diagnostics-vm-extension.md
-    - name: Prestandadiagnostik för virtuella Azure-datorer
-      href: performance-diagnostics.md
-    - name: Använd kapslad virtualisering
-      href: troubleshoot-vm-by-use-nested-virtualization.md
-    - name: Installera VM-agenten i offlineläge
-      href: install-vm-agent-offline.md
-    - name: Felsöka anslutna virtuella hårddiskar
-      items:
-      - name: Fel vid borttagning av lagringsresurs
-        href: storage-resource-deletion-errors.md
-      - name: Oväntade omstarter av virtuella datorer med anslutna virtuella hårddiskar
-        href: unexpected-reboots-attached-vhds.md
-    - name: Begränsningsfel
-      href: troubleshooting-throttling-errors.md
-    - name: Felsöka startproblem
-      items:
-      - name: BitLocker-fel
-        href: troubleshoot-bitlocker-boot-error.md
-      - name: Kontrollera filsystemfel
-        href: troubleshoot-check-disk-boot-error.md
-      - name: Vanliga fel som visar en blå kraschskärm
-        href: troubleshoot-common-blue-screen-error.md
+- name: Felsöka
+  href: ../troubleshooting/index.md
 - name: Referens
   items:
   - name: Azure CLI
@@ -514,9 +442,9 @@ items:
     href: https://azure.microsoft.com/documentation/videos/index/?services=virtual-machines
   - name: VANLIGA FRÅGOR OCH SVAR
     href: faq.md
-ms.openlocfilehash: 5d3aef71cd6658f1f73dd72a0b89dcb3d5eb4a5f
-ms.sourcegitcommit: ad08b2db50d63c8f550575d2e7bb9a0852efb12f
+ms.openlocfilehash: a991b7edc35256823a45b8ad65f9aa99eb7477c9
+ms.sourcegitcommit: b7e5bbbabc21df9fe93b4c18cc825920a0ab6fab
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/26/2018
-ms.locfileid: "47221222"
+ms.lasthandoff: 09/27/2018
+ms.locfileid: "47408478"
