--- a/articles/cognitive-services/Bing-Autosuggest/toc.yml
+++ b/articles/cognitive-services/Bing-Autosuggest/toc.yml
@@ -1,65 +1,72 @@
+items:
 - name: Dokumentation för Automatiska förslag i Bing
   href: index.yml
 - name: Översikt
   items:
-    - name: Vad är Automatiska förslag i Bing?
-      href: get-suggested-search-terms.md
+  - name: Vad är Automatiska förslag i Bing?
+    href: get-suggested-search-terms.md
 - name: Snabbstarter för REST API
-  expanded: true
   items:
-    - name: 'C#'
-      href: quickstarts/csharp.md
-    - name: Java
-      href: quickstarts/java.md
-    - name: Node.js
-      href: quickstarts/nodejs.md
-    - name: PHP
-      href: quickstarts/php.md
-    - name: Python
-      href: quickstarts/python.md
-    - name: Ruby
-      href: quickstarts/ruby.md
+  - name: C#
+    href: quickstarts/csharp.md
+  - name: Java
+    href: quickstarts/java.md
+  - name: Node.js
+    href: quickstarts/nodejs.md
+  - name: PHP
+    href: quickstarts/php.md
+  - name: Python
+    href: quickstarts/python.md
+  - name: Ruby
+    href: quickstarts/ruby.md
+  expanded: true
 - name: Självstudier
   items:
-    - name: Enkelsidig webbapp
-      href: tutorials/autosuggest.md
-    - name: Enkelsidig webbapp (källkod)
-      href: tutorials/autosuggest-source.md
+  - name: Enkelsidig webbapp
+    href: tutorials/autosuggest.md
+  - name: Enkelsidig webbapp (källkod)
+    href: tutorials/autosuggest-source.md
 - name: Instruktionsguider
   items:
-    - name: Användnings- och visningskrav
-      href: UseAndDisplayRequirements.md
-    - name: Uppgradera från v5 till v7
-      href: bing-autosuggest-upgrade-guide-v5-to-v7.md
+  - name: Använda och visa krav
+    href: UseAndDisplayRequirements.md
+  - name: Uppgradera från v5 till v7
+    href: bing-autosuggest-upgrade-guide-v5-to-v7.md
 - name: Referens
   items:
-    - name: API för automatiska förslag i Bing v7
-      href: 'https://docs.microsoft.com/rest/api/cognitiveservices/bing-autosuggest-api-v7-reference'
-    - name: API för automatiska förslag i Bing v5
-      href: 'https://docs.microsoft.com/rest/api/cognitiveservices/bing-autosuggest-api-v5-reference'
+  - name: API för automatiska förslag i Bing v7
+    href: https://docs.microsoft.com/rest/api/cognitiveservices/bing-autosuggest-api-v7-reference
+  - name: API för automatiska förslag i Bing v5
+    href: https://docs.microsoft.com/rest/api/cognitiveservices/bing-autosuggest-api-v5-reference
 - name: Resurser
   items:
-    - name: VANLIGA FRÅGOR OCH SVAR
-      href: bing-autosuggest-resource-faq.md
-    - name: Prissättning
-      href: 'https://azure.microsoft.com/pricing/details/cognitive-services/autosuggest-api/'
-    - name: UserVoice
-      href: 'https://cognitive.uservoice.com/forums/598198-bing-autosuggest'
-    - name: Stack Overflow
-      href: 'https://stackoverflow.com/search?q=bing+autosuggest'
-    - name: Regional tillgänglighet
-      href: 'https://azure.microsoft.com/global-infrastructure/services/'
-    - name: Azure-översikt
-      href: 'https://azure.microsoft.com/roadmap/'
-    - name: Kunskapsbas
-      href: 'https://cognitive.uservoice.com/knowledgebase/topics/127875-bing-search-web-image-video-news-autosuggest'
-    - name: Hämta API-nyckel
-      href: 'https://azure.microsoft.com/try/cognitive-services/?api=autosuggest-api'
-    - name: Prova!
-      href: 'https://azure.microsoft.com/services/cognitive-services/autosuggest/'
-    - name: Slutpunkt för Automatiska förslag i Bing
-      href: autosuggest-endpoint.md
-    - name: Språk som stöds
-      href: bing-autosuggest-supported-languages.md
-    - name: Analys för API för automatiska förslag i Bing
-      href: bing-autosuggest-stats.md
+  - name: VANLIGA FRÅGOR OCH SVAR
+    href: bing-autosuggest-resource-faq.md
+  - name: Prissättning
+    href: https://azure.microsoft.com/pricing/details/cognitive-services/autosuggest-api/
+  - name: UserVoice
+    href: https://cognitive.uservoice.com/forums/598198-bing-autosuggest
+  - name: Stack Overflow
+    href: https://stackoverflow.com/search?q=bing+autosuggest
+  - name: Regional tillgänglighet
+    href: https://azure.microsoft.com/global-infrastructure/services/
+  - name: Azure-översikt
+    href: https://azure.microsoft.com/roadmap/
+  - name: Kunskapsbas
+    href: https://cognitive.uservoice.com/knowledgebase/topics/127875-bing-search-web-image-video-news-autosuggest
+  - name: Hämta API-nyckel
+    href: https://azure.microsoft.com/try/cognitive-services/?api=autosuggest-api
+  - name: Prova!
+    href: https://azure.microsoft.com/services/cognitive-services/autosuggest/
+  - name: Slutpunkt för Automatiska förslag i Bing
+    href: autosuggest-endpoint.md
+  - name: Stöd för språk och region
+    href: language-support.md
+  - name: Analys för API för automatiska förslag i Bing
+    href: bing-autosuggest-stats.md
+ms.openlocfilehash: 2023b16534a23db1df0562a163614f1d0237fb6e
+ms.sourcegitcommit: 7c4fd6fe267f79e760dc9aa8b432caa03d34615d
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 09/28/2018
+ms.locfileid: "47434712"
