--- a/articles/cognitive-services/Bing-Image-Search/toc.yml
+++ b/articles/cognitive-services/Bing-Image-Search/toc.yml
@@ -94,15 +94,15 @@ items:
     href: https://azure.microsoft.com/services/cognitive-services/bing-image-search-api/
   - name: Slutpunkter för bildsökning i Bing
     href: image-search-endpoint.md
-  - name: Länder och marknader som stöds
-    href: supported-countries-markets.md
+  - name: Stöd för språk och region
+    href: language-support.md
   - name: Använda och visa krav
     href: UseAndDisplayRequirements.md
   - name: Analys för API för bildsökning i Bing
     href: bing-image-stats.md
-ms.openlocfilehash: 2b7b4bc8fb79687d032de52e3ac2ecbe4e944a8c
-ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.openlocfilehash: 16d2d81731f23ad1293fe405488dd7f3bbfbc854
+ms.sourcegitcommit: 7c4fd6fe267f79e760dc9aa8b432caa03d34615d
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/24/2018
-ms.locfileid: "46967361"
+ms.lasthandoff: 09/28/2018
+ms.locfileid: "47431506"
