--- a/articles/cognitive-services/Bing-Spell-Check/toc.yml
+++ b/articles/cognitive-services/Bing-Spell-Check/toc.yml
@@ -1,65 +1,72 @@
+items:
 - name: Dokumentation för API för stavningskontroll i Bing
   href: index.yml
 - name: Översikt
   items:
-    - name: Vad är API för stavningskontroll i Bing?
-      href: proof-text.md
+  - name: Vad är API för stavningskontroll i Bing?
+    href: proof-text.md
 - name: Snabbstarter för REST API
-  expanded: true
   items:
-    - name: 'C#'
-      href: quickstarts/csharp.md
-    - name: Java
-      href: quickstarts/java.md
-    - name: Node.js
-      href: quickstarts/nodejs.md
-    - name: PHP
-      href: quickstarts/php.md
-    - name: Python
-      href: quickstarts/python.md
-    - name: Ruby
-      href: quickstarts/ruby.md
+  - name: C#
+    href: quickstarts/csharp.md
+  - name: Java
+    href: quickstarts/java.md
+  - name: Node.js
+    href: quickstarts/nodejs.md
+  - name: PHP
+    href: quickstarts/php.md
+  - name: Python
+    href: quickstarts/python.md
+  - name: Ruby
+    href: quickstarts/ruby.md
+  expanded: true
 - name: Snabbstarter för SDK
   items:
-    - name: 'Snabbstart för SDK i C#'
-      href: sdk-quickstart-spell-check.md
-    - name: Översikt över SDK-exempel
-      href: sdk.md
+  - name: Snabbstart för SDK i C#
+    href: sdk-quickstart-spell-check.md
+  - name: Översikt över SDK-exempel
+    href: sdk.md
 - name: Självstudier
   items:
-    - name: Skapa en webbapp för stavningskontroll
-      href: tutorials/spellcheck.md
-    - name: 'Källkod: webbapp för stavningskontroll'
-      href: tutorials/spellcheck-source.md
+  - name: Skapa en webbapp för stavningskontroll
+    href: tutorials/spellcheck.md
+  - name: 'Källkod: webbapp för stavningskontroll'
+    href: tutorials/spellcheck-source.md
 - name: Instruktionsguider
   items:
-    - name: Använda och visa krav
-      href: UseAndDisplayRequirements.md
-    - name: Uppgradera från v5 till v7
-      href: bing-spell-check-upgrade-guide-v5-to-v7.md
+  - name: Använda och visa krav
+    href: UseAndDisplayRequirements.md
+  - name: Uppgradera från v5 till v7
+    href: bing-spell-check-upgrade-guide-v5-to-v7.md
 - name: Referens
   items:
-    - name: Stavningskontrolls-API i Bing v7
-      href: 'https://docs.microsoft.com/rest/api/cognitiveservices/bing-spell-check-api-v7-reference'
-    - name: Stavningskontrolls-API i Bing v5 (gammal version)
-      href: 'https://docs.microsoft.com/rest/api/cognitiveservices/bing-spell-check-api-v5-reference'
+  - name: Stavningskontrolls-API i Bing v7
+    href: https://docs.microsoft.com/rest/api/cognitiveservices/bing-spell-check-api-v7-reference
+  - name: Stavningskontrolls-API i Bing v5 (gammal version)
+    href: https://docs.microsoft.com/rest/api/cognitiveservices/bing-spell-check-api-v5-reference
 - name: Resurser
   items:
-    - name: Analys för API för stavningskontroll i Bing
-      href: bing-spell-check-stats.md
-    - name: VANLIGA FRÅGOR OCH SVAR
-      href: bing-spell-check-resource-faq.md
-    - name: Prissättning
-      href: 'https://azure.microsoft.com/pricing/details/cognitive-services/spellcheck-api/'
-    - name: Regional tillgänglighet
-      href: 'https://azure.microsoft.com/global-infrastructure/services/'
-    - name: Stack Overflow
-      href: 'https://stackoverflow.com/questions/tagged/bing-api'
-    - name: Prenumerationsnyckel
-      href: 'https://azure.microsoft.com/try/cognitive-services/?api=spellcheck-api'
-    - name: Språk som stöds
-      href: bing-spell-check-supported-languages.md
-    - name: Prova!
-      href: 'https://azure.microsoft.com/services/cognitive-services/spell-check/'
-    - name: UserVoice
-      href: 'https://cognitive.uservoice.com/forums/598195-bing-spell-check'
+  - name: Analys för API för stavningskontroll i Bing
+    href: bing-spell-check-stats.md
+  - name: VANLIGA FRÅGOR OCH SVAR
+    href: bing-spell-check-resource-faq.md
+  - name: Stöd för språk och region
+    href: language-support.md
+  - name: Prissättning
+    href: https://azure.microsoft.com/pricing/details/cognitive-services/spellcheck-api/
+  - name: Regional tillgänglighet
+    href: https://azure.microsoft.com/global-infrastructure/services/
+  - name: Stack Overflow
+    href: https://stackoverflow.com/questions/tagged/bing-api
+  - name: Prenumerationsnyckel
+    href: https://azure.microsoft.com/try/cognitive-services/?api=spellcheck-api
+  - name: Prova!
+    href: https://azure.microsoft.com/services/cognitive-services/spell-check/
+  - name: UserVoice
+    href: https://cognitive.uservoice.com/forums/598195-bing-spell-check
+ms.openlocfilehash: 539de32b27a8fdb00479b280c0a0a18fe887f2b4
+ms.sourcegitcommit: 7c4fd6fe267f79e760dc9aa8b432caa03d34615d
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 09/28/2018
+ms.locfileid: "47432689"
