--- a/articles/cognitive-services/TOC.yml
+++ b/articles/cognitive-services/TOC.yml
@@ -30,6 +30,8 @@ items:
   items:
   - name: Azure-översikt
     href: https://azure.microsoft.com/roadmap/?category=cognitive-services
+  - name: Stöd för språk och region
+    href: language-support.md
   - name: Prissättning
     href: https://azure.microsoft.com/pricing/details/cognitive-services/
   - name: Priskalkylator
@@ -42,9 +44,9 @@ items:
     href: http://go.microsoft.com/fwlink/?LinkId=698895
   - name: Kunskapsbas
     href: https://cognitive.uservoice.com/knowledgebase
-ms.openlocfilehash: 233a9bb508c8e6d02fd3e95cb8176f56bc9726b9
-ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.openlocfilehash: 8311019b6c4d985f40437788118eea293c78718d
+ms.sourcegitcommit: 7c4fd6fe267f79e760dc9aa8b432caa03d34615d
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/24/2018
-ms.locfileid: "46972637"
+ms.lasthandoff: 09/28/2018
+ms.locfileid: "47432003"
