--- a/articles/cognitive-services/bing-visual-search/toc.yml
+++ b/articles/cognitive-services/bing-visual-search/toc.yml
@@ -1,77 +1,84 @@
+items:
 - name: Dokumentation om Bing Visual Search
   href: index.yml
 - name: Översikt
   items:
-    - name: Vad är API för Bing Visual Search?
-      href: overview.md
+  - name: Vad är API för Bing Visual Search?
+    href: overview.md
 - name: Snabbstarter för REST API
-  expanded: true
   items:
-    - name: 'Första frågan i C#'
-      href: quickstarts/csharp.md
-    - name: Första frågan i Java
-      href: quickstarts/java.md
-    - name: Första frågan för Node.js
-      href: quickstarts/nodejs.md
-    - name: Första frågan i Python
-      href: quickstarts/python.md
+  - name: Första frågan i C#
+    href: quickstarts/csharp.md
+  - name: Första frågan i Java
+    href: quickstarts/java.md
+  - name: Första frågan för Node.js
+    href: quickstarts/nodejs.md
+  - name: Första frågan i Python
+    href: quickstarts/python.md
+  expanded: true
 - name: SDK
-  expanded: true
   items:
-    - name: Översikt över SDK-exempel
-      href: sdk.md
-    - name: 'SDK i C#'
-      href: visual-search-sdk-c-sharp.md
-    - name: SDK i Node
-      href: visual-search-sdk-node.md
-    - name: SDK i Python
-      href: visual-search-sdk-python.md
+  - name: Översikt över SDK-exempel
+    href: sdk.md
+  - name: SDK i C#
+    href: visual-search-sdk-c-sharp.md
+  - name: SDK i Node
+    href: visual-search-sdk-node.md
+  - name: SDK i Python
+    href: visual-search-sdk-python.md
+  expanded: true
 - name: Självstudier
   items:
-    - name: Webbapp för bilduppladdning
-      href: tutorial-visual-search-image-upload.md
-    - name: Enkelsidig webbapp
-      href: tutorial-bing-visual-search-single-page-app.md
-    - name: Enkelsidig webbapp (källkod)
-      href: tutorial-bing-visual-search-single-page-app-source.md
-    - name: 'SDK för visuell sökning i Bing, bildbeskärningsområde och resultat'
-      href: tutorial-visual-search-crop-area-results.md
-    - name: 'SDK för visuell sökning i Bing, ImageInsightsToken och resultat'
-      href: tutorial-visual-search-insights-token.md
+  - name: Webbapp för bilduppladdning
+    href: tutorial-visual-search-image-upload.md
+  - name: Enkelsidig webbapp
+    href: tutorial-bing-visual-search-single-page-app.md
+  - name: Enkelsidig webbapp (källkod)
+    href: tutorial-bing-visual-search-single-page-app-source.md
+  - name: SDK för visuell sökning i Bing, bildbeskärningsområde och resultat
+    href: tutorial-visual-search-crop-area-results.md
+  - name: SDK för visuell sökning i Bing, ImageInsightsToken och resultat
+    href: tutorial-visual-search-insights-token.md
 - name: Exempel
   items:
-    - name: Kodexempel
-      href: 'https://azure.microsoft.com/resources/samples/?sort=0&service=cognitive-services&term=Bing+Visual+Search'
+  - name: Kodexempel
+    href: https://azure.microsoft.com/resources/samples/?sort=0&service=cognitive-services&term=Bing+Visual+Search
 - name: Begrepp
   items:
-    - name: Insikter om standardbilder
-      href: default-insights-tag.md
-    - name: Användning av insikter i Bing
-      href: bing-insights-usage.md
-    - name: Länder och marknader som stöds
-      href: supported-countries-markets.md
-    - name: Analys för API för Bing Visual Search
-      href: bing-visual-search-stats.md
+  - name: Insikter om standardbilder
+    href: default-insights-tag.md
+  - name: Användning av insikter i Bing
+    href: bing-insights-usage.md
+  - name: Analys för API för Bing Visual Search
+    href: bing-visual-search-stats.md
 - name: Instruktionsguider
   items:
-    - name: Få insikter med token
-      href: use-insights-token.md
-    - name: Användnings- och visningsresultat
-      href: use-and-display-requirements.md
-    - name: Ändra storlek på och beskär miniatyrer
-      href: resize-and-crop-thumbnails.md
+  - name: Få insikter med token
+    href: use-insights-token.md
+  - name: Användnings- och visningsresultat
+    href: use-and-display-requirements.md
+  - name: Ändra storlek på och beskär miniatyrer
+    href: resize-and-crop-thumbnails.md
 - name: Referens
-  expanded: true
   items:
-    - name: REST v7 API
-      href: 'https://aka.ms/bingvisualsearchreferencedoc'
+  - name: REST v7 API
+    href: https://aka.ms/bingvisualsearchreferencedoc
+  expanded: true
 - name: Resurser
   items:
-    - name: Få en kostnadsfri åtkomstnyckel
-      href: 'https://azure.microsoft.com/try/cognitive-services/?api=bing-visual-search-api'
-    - name: Prova!
-      href: 'https://aka.ms/bingvisualsearchtryforfree'
-    - name: Stack Overflow
-      href: 'https://stackoverflow.com/questions/tagged/bing-search'
-    - name: User Voice
-      href: 'https://cognitive.uservoice.com/forums/555907-bing-search'
+  - name: Stöd för språk och region
+    href: language-support.md
+  - name: Få en kostnadsfri åtkomstnyckel
+    href: https://azure.microsoft.com/try/cognitive-services/?api=bing-visual-search-api
+  - name: Prova!
+    href: https://aka.ms/bingvisualsearchtryforfree
+  - name: Stack Overflow
+    href: https://stackoverflow.com/questions/tagged/bing-search
+  - name: User Voice
+    href: https://cognitive.uservoice.com/forums/555907-bing-search
+ms.openlocfilehash: f33e0fe7c13a7686c244d10297fd23e7ca59d452
+ms.sourcegitcommit: 7c4fd6fe267f79e760dc9aa8b432caa03d34615d
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 09/28/2018
+ms.locfileid: "47432434"
