--- a/articles/role-based-access-control/index.yml
+++ b/articles/role-based-access-control/index.yml
@@ -1,4 +1,10 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: 6972ad521ac5622086b5294dc6b49e35f10ba178
+ms.sourcegitcommit: 7c4fd6fe267f79e760dc9aa8b432caa03d34615d
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 09/28/2018
+ms.locfileid: "47431489"
 documentType: LandingData
 title: Dokumentation om rollbaserad åtkomstkontroll
 metadata:
@@ -14,12 +20,6 @@ metadata:
   ms.topic: landing-page
   ms.date: 06/15/2018
   ms.author: rolyon
-  ms.openlocfilehash: 2d49a0ad4393582439511e5454041a2478cea961
-  ms.sourcegitcommit: 5a7f13ac706264a45538f6baeb8cf8f30c662f8f
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 06/29/2018
-  ms.locfileid: "37115042"
 abstract:
   description: Rollbaserad åtkomstkontroll (RBAC) är ett system som ger detaljerad åtkomsthantering av resurser i Azure. Med hjälp av RBAC kan du hålla isär uppgifter i ditt team och bevilja endast den omfattning av åtkomst till användare som de behöver för att utföra sitt arbete.
   aside:
@@ -46,3 +46,16 @@ sections:
     - html: <a href="/azure/role-based-access-control/tutorial-role-assignments-group-powershell">Bevilja åtkomst för en grupp – PowerShell</a>
     - html: <a href="/azure/role-based-access-control/tutorial-custom-role-powershell">Skapa en anpassad roll – PowerShell</a>
     - html: <a href="/azure/role-based-access-control/tutorial-custom-role-cli">Skapa en anpassad roll – CLI</a>
+- title: Utveckla dina färdigheter med Microsoft Learn
+  items:
+  - type: list
+    style: cards
+    className: cardsFTitle
+    items:
+    - title: Skydda dina Azure-resurser med rollbaserad åtkomstkontroll (RBAC)
+      href: /learn/modules/secure-azure-resources-with-rbac/
+      image:
+        src: /learn/achievements/secure-azure-resources-with-rbac.svg
+        href: /learn/modules/secure-azure-resources-with-rbac/
+  - type: paragraph
+    text: <a href="/learn/browse/?products=azure-active-directory">Mer interaktiv inlärning...</a>
