--- a/articles/mysql/index.yml
+++ b/articles/mysql/index.yml
@@ -46,7 +46,7 @@ sections:
     style: ordered
     items:
     - html: Utforma en databas&#58; <a href="/azure/mysql/tutorial-design-database-using-portal">Azure Portal</a> | <a href="/azure/mysql/tutorial-design-database-using-cli">Azure CLI</a>
-    - html: 'Skapa en webbapp & #58; <a href="https://portal.azure.com/#create/hub">Wordpress – Portal</a> | <a href="../app-service-web/app-service-web-tutorial-php-mysql.md?toc=%2fazure%2fmysql%2ftoc.json">PHP – Azure CLI</a>'
+    - html: Skapa en webbapp&#58; <a href="https://portal.azure.com/#create/hub">Wordpress – Portal</a> | <a href="../app-service-web/app-service-web-tutorial-php-mysql.md?toc=%2fazure%2fmysql%2ftoc.json">PHP – Azure CLI</a>
 - title: Referens
   items:
   - type: list
