commit translated contents

--- a/articles/iot-accelerators/toc.yml
+++ b/articles/iot-accelerators/toc.yml
@@ -97,61 +97,6 @@ items:
       href: iot-accelerators-remote-monitoring-rbac.md
     - name: Ge åtkomst till telemetriutforskare
       href: iot-accelerators-remote-monitoring-rbac-tsi.md
-  - name: Fjärrövervakning (tidigare version)
-    items:
-    - name: Vilka är de förkonfigurerade lösningarna?
-      href: ../iot-suite/iot-suite-v1-what-are-preconfigured-solutions.md
-    - name: VANLIGA FRÅGOR OCH SVAR
-      href: ../iot-suite/iot-suite-v1-faq.md
-    - name: Kom igång
-      items:
-      - name: Kom igång med förkonfigurerade lösningar
-        href: ../iot-suite/iot-suite-v1-getstarted-preconfigured-solutions.md
-      - name: Behörigheter på azureiotsuite.com
-        href: ../iot-suite/iot-suite-v1-permissions.md
-      - name: Genomgång av lösning för fjärrövervakning
-        href: ../iot-suite/iot-suite-v1-remote-monitoring-sample-walkthrough.md
-      - name: Anslut Raspberry Pi
-        href: ../iot-suite/iot-suite-v1-raspberry-pi-kit-get-started.md
-        items:
-        - name: Använd C
-          items:
-          - name: Simulerade data
-            href: ../iot-suite/iot-suite-v1-raspberry-pi-kit-c-get-started-simulator.md
-          - name: Använd verkliga sensorer
-            href: ../iot-suite/iot-suite-v1-raspberry-pi-kit-c-get-started-basic.md
-          - name: Implementera uppdatering för inbyggd programvara
-            href: ../iot-suite/iot-suite-v1-raspberry-pi-kit-c-get-started-advanced.md
-        - name: Använd Node.js
-          items:
-          - name: Simulerade data
-            href: ../iot-suite/iot-suite-v1-raspberry-pi-kit-node-get-started-simulator.md
-          - name: Använd verkliga sensorer
-            href: ../iot-suite/iot-suite-v1-raspberry-pi-kit-node-get-started-basic.md
-          - name: Implementera uppdatering för inbyggd programvara
-            href: ../iot-suite/iot-suite-v1-raspberry-pi-kit-node-get-started-advanced.md
-      - name: Anslut ditt MXChip IoT DevKit
-        href: ../iot-hub/iot-hub-arduino-iot-devkit-az3166-devkit-remote-monitoring.md
-    - name: Instruktionsguider
-      items:
-      - name: Anslut en simulerad enhet
-        items:
-        - name: C i Windows
-          href: ../iot-suite/iot-suite-v1-connecting-devices.md
-        - name: C i Linux
-          href: ../iot-suite/iot-suite-v1-connecting-devices-linux.md
-        - name: Node.js
-          href: ../iot-suite/iot-suite-v1-connecting-devices-node.md
-      - name: Anslut en logikapp till fjärrövervakningslösningen
-        href: ../iot-suite/iot-suite-v1-logic-apps-tutorial.md
-      - name: Anpassa en lösningsaccelerator
-        href: ../iot-suite/iot-suite-v1-guidance-on-customizing-preconfigured-solutions.md
-      - name: Använd dynamisk telemetri med fjärrövervakningslösningen
-        href: ../iot-suite/iot-suite-v1-dynamic-telemetry.md
-      - name: Skapa en anpassad regel i fjärrövervakningslösningen
-        href: ../iot-suite/iot-suite-v1-custom-rule.md
-      - name: Enhetsinformation i fjärrövervakningslösningen
-        href: ../iot-suite/iot-suite-v1-remote-monitoring-device-info.md
   - name: Ansluten fabrik
     items:
     - name: Använd instrumentpanelen
@@ -203,7 +148,7 @@ items:
   - name: Lösningar
     items:
     - name: IoT-lösningsacceleratorer
-      href: /azure/iot-suite
+      href: /azure/iot-accelerators
     - name: IoT Central
       href: https://docs.microsoft.com/microsoft-iot-central/
   - name: Plattformstjänster
@@ -256,9 +201,9 @@ items:
     href: https://stackoverflow.com/questions/tagged/azure-iot-suite
   - name: Utbildningsväg för IoT-lösningsacceleratorer
     href: https://azure.microsoft.com/documentation/learning-paths/iot-suite/
-ms.openlocfilehash: 935b9acf2eeaaee73745426eefb5625f470f62b7
-ms.sourcegitcommit: ce526d13cd826b6f3e2d80558ea2e289d034d48f
+ms.openlocfilehash: f0efa66bd9ed85ed4ab79f5937355bd19c404a64
+ms.sourcegitcommit: 55952b90dc3935a8ea8baeaae9692dbb9bedb47f
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/19/2018
-ms.locfileid: "46365476"
+ms.lasthandoff: 10/09/2018
+ms.locfileid: "48884351"
