--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -185,6 +185,8 @@ items:
         href: sql-api-sql-query-metrics.md
       - name: Lagrade procedurer, utlösare och UDF:er
         href: programming.md
+      - name: SQL-datapartitionering
+        href: sql-api-partition-data.md
       - name: Datatyper
         items:
         - name: DateTime
@@ -281,6 +283,8 @@ items:
       items:
       - name: Importera diagramdata
         href: bulk-executor-graph-dotnet.md
+      - name: Partitionering av diagramdata
+        href: graph-partitioning.md
   - name: Dokument för API för Cassandra
     items:
     - name: Introduktion
@@ -418,8 +422,6 @@ items:
         href: performance-testing.md
     - name: Kostnadseffektiva läsningar och skrivningar
       href: key-value-store-cost.md
-    - name: SQL-datapartitionering
-      href: sql-api-partition-data.md
   - name: Integrera med andra Azure-tjänster
     items:
     - name: Näthandelslösning för ändringsflöde
@@ -490,9 +492,9 @@ items:
       href: use-cases.md
     - name: Appar för sociala medier
       href: social-media-apps.md
-ms.openlocfilehash: 8111949d7069066b63c12a851324d21feda8bac2
-ms.sourcegitcommit: 0bb8db9fe3369ee90f4a5973a69c26bff43eae00
+ms.openlocfilehash: dac79ee7d4a8810cce0a2e77e8dcd8d06842454c
+ms.sourcegitcommit: 55952b90dc3935a8ea8baeaae9692dbb9bedb47f
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/08/2018
-ms.locfileid: "48868600"
+ms.lasthandoff: 10/09/2018
+ms.locfileid: "48888025"
