--- a/articles/machine-learning/service/toc.yml
+++ b/articles/machine-learning/service/toc.yml
@@ -3,12 +3,10 @@ items:
   href: index.yml
 - name: Översikt
   items:
-  - name: Vad är Azure Machine Learning Services?
+  - name: Vad är tjänsten Azure Machine Learning?
     href: overview-what-is-azure-ml.md
   - name: Vad hände med Workbench?
     href: overview-what-happened-to-workbench.md
-  - name: Jämför maskininlärningsprodukter på Microsoft
-    href: overview-more-machine-learning.md
   expanded: true
 - name: Snabbstarter
   items:
@@ -335,9 +333,9 @@ items:
       href: ../desktop-workbench/frequently-asked-questions.md
     - name: Äldre problem
       href: ../desktop-workbench/known-issues-and-troubleshooting-guide.md
-ms.openlocfilehash: fb5ffe0b261d1c233765175170b5697050b58d20
-ms.sourcegitcommit: 609c85e433150e7c27abd3b373d56ee9cf95179a
+ms.openlocfilehash: 183622c419558d696cd5cf4c4a2dabb5f6b9d150
+ms.sourcegitcommit: 55952b90dc3935a8ea8baeaae9692dbb9bedb47f
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/03/2018
-ms.locfileid: "48248827"
+ms.lasthandoff: 10/09/2018
+ms.locfileid: "48884794"
