--- a/articles/databox-online/index.yml
+++ b/articles/databox-online/index.yml
@@ -1,23 +1,22 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 467d4d982d76f4defe8ed887ebcc3f99100af313
-ms.sourcegitcommit: 7b0778a1488e8fd70ee57e55bde783a69521c912
+ms.openlocfilehash: cd544367113986b3a3959c2bf50fac80a8b36bc5
+ms.sourcegitcommit: 3a02e0e8759ab3835d7c58479a05d7907a719d9c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/10/2018
-ms.locfileid: "49069003"
+ms.lasthandoff: 10/13/2018
+ms.locfileid: "49309084"
 documentType: LandingData
-title: Azure Data Box-dokumentation för överföring online
+title: Azure Data Box-dokumentation – överföring online
 metadata:
-  title: Azure Data Box-dokumentation för överföring online
-  description: Med Azure Data Box kan du överföra hundratals terabyte data till Azure på ett snabbt, prisvärt och tillförlitligt sätt. Använd Data Box-enheter för dataöverföringar över nätverket med höga prestanda.
-  services: databox-edge-gateway
+  title: Azure Data Box-dokumentation – överföring online
+  description: Använd Data Box-enheter för dataöverföringar med hög prestanda över nätverket till Azure på ett snabbt, prisvärt och tillförlitligt sätt.
+  services: databox
   author: alkohli
   manager: twooley
-  ms.service: databox-edge-gateway
-  ms.tgt_pltfrm: na
-  ms.devlang: na
+  ms.service: databox
+  ms.subservice: edge
   ms.topic: landing-page
-  ms.date: 09/26/2018
+  ms.date: 10/12/2018
   ms.author: alkohli
 abstract:
   description: Med Azure Data Box kan du överföra hundratals terabyte data till Azure på ett snabbt, prisvärt och tillförlitligt sätt. Använd Data Box-enheter för dataöverföringar över nätverket med höga prestanda.<p>Välj Data Box Gateway<SUP>förhandsversion</SUP> för att skicka data för molnarkivering, haveriberedskap, eller för att bearbeta data i molnskala.  Använd Data Box Edge<SUP>förhandsversion</SUP> för att filtrera, analysera och transformera data när de flyttas till Azure.</p><p>Lär dig hur du kan använda Data Box Gateway och Data Box Edge för nätverksbaserad överföring med våra självstudier.</p>
@@ -30,13 +29,17 @@ sections:
     style: ordered
     items:
     - html: <a href="data-box-gateway-deploy-prep">Förbereda distributionen av Azure Data Box Gateway</a>
-    - html: <a href="/azure/databox/data-box-deploy-provision-hyperv">Etablera Azure Data Box Gateway i Hyper-V</a>
+    - html: <a href="data-box-gateway-deploy-provision-hyperv">Etablera Azure Data Box Gateway i Hyper-V</a>
     - html: <a href="data-box-gateway-deploy-provision-vmware">Etablera Azure Data Box Gateway i VMware</a>
     - html: <a href="data-box-gateway-deploy-connect-setup-activate">Ansluta, konfigurera och aktivera Azure Data Box Gateway</a>
-    - html: <a href=data-box-gateway-deploy-add-shares">Överföra data med Azure Data Box Gateway</a>
+    - html: <a href="data-box-gateway-deploy-add-shares">Överföra data med Azure Data Box Gateway</a>
   - type: paragraph
     text: <b>För Data Box Edge<SUP>förhandsversion</SUP></b>
   - type: list
     style: ordered
     items:
-    - html: <a href="data-box-edge-overview#sign-up">Registrera dig!</a>
+    - html: <a href="data-box-edge-deploy-prep">Förbereda distributionen av Azure Data Box Edge</a>
+    - html: <a href="data-box-edge-deploy-install">Installera Azure Data Box Edge</a>
+    - html: <a href="data-box-edge-deploy-connect-setup-activate">Ansluta, konfigurera och aktivera Azure Data Box Edge</a>
+    - html: <a href="data-box-edge-deploy-add-shares">Överföra data med Azure Data Box Edge</a>
+    - html: <a href="data-box-edge-deploy-configure-compute">Transformera data med Azure Data Box Edge</a>
