--- a/articles/databox/TOC.yml
+++ b/articles/databox/TOC.yml
@@ -1,6 +1,6 @@
 items:
-- name: Dokumentation – Azure Data Box för överföring offline
-  href: /azure/databox/
+- name: Azure Data Box-dokumentation – överföring offline
+  href: /azure/databox
   items:
   - name: Data Box
     items:
@@ -90,17 +90,13 @@ items:
         href: data-box-heavy-overview.md
   - name: Resurser
     items:
-    - name: Azure-översikt
-      href: https://azure.microsoft.com/roadmap/?category=storage
-    - name: Marknadsföring för Azure Data Box
-      href: https://azure.microsoft.com/services/storage/databox/
+    - name: Data Box-produkt
+      href: https://azure.microsoft.com/services/storage/databox/data/
     - name: Prissättning
       href: https://azure.microsoft.com/pricing/details/storage/databox/
-    - name: Tjänstuppdateringar
-      href: https://azure.microsoft.com/updates/?product=databox
-ms.openlocfilehash: 2c436e372df4cb42a52db9df35adfa5e0b48594f
-ms.sourcegitcommit: 7b0778a1488e8fd70ee57e55bde783a69521c912
+ms.openlocfilehash: aa95ba5708ec72d6a4665fb18126a6eadead6ff2
+ms.sourcegitcommit: 3a02e0e8759ab3835d7c58479a05d7907a719d9c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/10/2018
-ms.locfileid: "49068442"
+ms.lasthandoff: 10/13/2018
+ms.locfileid: "49309152"
