--- a/articles/lab-services/index.yml
+++ b/articles/lab-services/index.yml
@@ -1,6 +1,12 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: fbe7b703df033a3feacfa20e17868885e459c7e7
+ms.sourcegitcommit: 3a02e0e8759ab3835d7c58479a05d7907a719d9c
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 10/13/2018
+ms.locfileid: "49311142"
 documentType: LandingData
-title: Dokumentation för förhandsversion av Azure Lab Services (tidigare DevTest Labs)
+title: Förhandsversion av Azure Lab Services och dokumentation om Azure DevTest Labs
 metadata:
   title: Dokumentation för Azure Lab Services – självstudier, API-referens | Microsoft Docs
   description: Lär dig hur du använder Azure Lab Services för att snabbt konfigurera ett labb för utveckling, testning, hackathon eller ett klassrumslabb för ditt team eller dina studenter i molnet. Självstudier för Azure, exempel och mycket mer visar hur du skapar, hanterar och skyddar labb.
@@ -13,12 +19,6 @@ metadata:
   ms.topic: landing-page
   ms.date: 04/06/2018
   ms.author: spelluru
-  ms.openlocfilehash: 1b37824b113fd9b1aaf225c5cb24b2dd27f1b47f
-  ms.sourcegitcommit: 266fe4c2216c0420e415d733cd3abbf94994533d
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 06/01/2018
-  ms.locfileid: "34636706"
 abstract:
   description: Lär dig hur du använder Azure Lab Services för att snabbt konfigurera ett labb för utveckling, testning, hackathon eller ett klassrumslabb för ditt team eller dina studenter i molnet. Självstudier för Azure, exempel och mycket mer visar hur du skapar, hanterar och skyddar labb.
 sections:
@@ -59,4 +59,4 @@ sections:
     - title: Kommandorad
       html: <p><a href="/cli/azure/lab">Azure CLI</a></p><p><a href="/powershell/module/azurerm.devtestlabs/#devtest_labs">Azure PowerShell</a></p>
     - title: REST
-      html: <p><a href="/rest/api/dtl">REST API</a></p>
+      html: <p><a href="/rest/api/dtl">REST-API</a></p>
