--- a/articles/openshift/toc.yml
+++ b/articles/openshift/toc.yml
@@ -1,21 +1,28 @@
+items:
 - name: OpenShift-dokumentation
   href: index.md
 - name: Snabbstarter
-  expanded: true
   items:
-    - name: 'OpenShift: Community-mallar'
-      href: 'https://azure.microsoft.com/en-us/resources/templates/openshift-origin-rhel/'
+  - name: 'OpenShift: Community-mallar'
+    href: https://azure.microsoft.com/resources/templates/openshift-origin-rhel/
+  expanded: true
 - name: Självstudier
   items:
-    - name: Distribuera till virtuella Azure-datorer
-      href: /azure/virtual-machines/linux/openshift-get-started
+  - name: Distribuera till virtuella Azure-datorer
+    href: /azure/virtual-machines/linux/openshift-get-started
 - name: Resurser
   items:
-    - name: Azure-översikt
-      href: 'https://azure.microsoft.com/roadmap/'
-    - name: Behållarmall för OpenShift
-      href: 'https://github.com/Microsoft/openshift-container-platform'
-    - name: OpenShift Origin
-      href: 'https://docs.openshift.org/latest/getting_started/index.html'
-    - name: OpenShift-webbplats
-      href: 'https://docs.openshift.org/latest/welcome/index.html'
+  - name: Azure-översikt
+    href: https://azure.microsoft.com/roadmap/
+  - name: Containermall för OpenShift
+    href: https://github.com/Microsoft/openshift-container-platform
+  - name: OpenShift Origin
+    href: https://docs.openshift.org/latest/getting_started/index.html
+  - name: OpenShift-webbplats
+    href: https://docs.openshift.org/latest/welcome/index.html
+ms.openlocfilehash: d0339ac640f7f4f554d99bbff26ca258ed3620c6
+ms.sourcegitcommit: 6361a3d20ac1b902d22119b640909c3a002185b3
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "49362029"
